findbugs pass, other interesting things